--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -173,12 +173,13 @@
                     <span>Profile</span>
                 </div>
             </a>
-            <a href="#" class="box">
+            <a href="{% url 'message_list' %}" class="box">
                 <div class="icon"><i class="fas fa-envelope"></i></div>
                 <div class="box-content">
                     <span>My Messages</span>
                 </div>
             </a>
+            
             <a href="#" class="box">
                 <div class="icon"><i class="fas fa-tasks"></i></div>
                 <div class="box-content">
