new file:   backend/static/css/topbar.css 	new file:   backend/staticfiles/css/dashboard.css 	new file:   backend/staticfiles/css/messages.css 	new file:   backend/staticfiles/css/sidebar.css 	new file:   backend/staticfiles/css/topbar.css 	new file:   backend/staticfiles/js/dashboard.js 	modified:   backend/templates/home.html 	new file:   backend/templates/topbar.html

--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-{% include 'sidebar.html' %}
+
+{% include 'topbar.html' %}
 {% block content %}
 <style>
     /* Main container styling */
