--- a/backend/static/css/messages.css
+++ b/backend/static/css/messages.css
@@ -101,13 +101,12 @@ body {
     gap: 12px;
 }
 
-/* Dynamic message size based on text length */
 .message {
     padding: 12px 20px;
     border-radius: 25px;
-    max-width: 60%; /* Limit the maximum width of messages */
-    min-width: 10%; /* Ensure very short messages aren't too narrow */
-    width: fit-content; /* Automatically adjust based on message length */
+    max-width: 60%;
+    min-width: 10%;
+    width: fit-content;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
     word-wrap: break-word;
     font-size: 1rem;
@@ -196,13 +195,6 @@ body {
     font-size: 1.2rem;
 }
 
-:root {
-    --background: #f5f5f5;
-    --text-color: #333;
-    --sidebar-bg: #ecf0f1;
-    --chat-bg: #ffffff;
-}
-
 .badge {
     background-color: red;
     color: white;
@@ -212,19 +204,19 @@ body {
     position: absolute;
     top: 10px;
     right: 10px;
-    display: inline-block; /* Ensures it is visible */
-    z-index: 1; /* Ensure it appears on top of other elements */
+    display: inline-block;
+    z-index: 1;
 }
 
 #new-convo-modal {
     display: none;
-    position: fixed; /* Fix the modal position relative to the viewport */
+    position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Center the modal */
+    transform: translate(-50%, -50%);
     background-color: white;
     padding: 20px;
     border: 2px solid #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000; /* Ensure it appears on top */
+    z-index: 1000;
 }
