--- a/backend/templates/my_requirements.html
+++ b/backend/templates/my_requirements.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% include 'topbar.html' %}
 {% block content %}
 <h2>My Requirements</h2>
 {% include "enroll_sidebar.html" %}
