modified:   To do list.txt 	new file:   backend/__pycache__/create_admins.cpython-312.pyc 	new file:   backend/__pycache__/create_professors.cpython-312.pyc 	new file:   backend/__pycache__/create_students.cpython-312.pyc 	modified:   backend/backend/__pycache__/settings.cpython-312.pyc 	new file:   backend/create_admins.py 	new file:   backend/create_professors.py 	new file:   backend/create_students.py 	new file:   backend/media/profile_pics/contact.ico 	modified:   backend/registration/__pycache__/admin.cpython-312.pyc 	modified:   backend/registration/__pycache__/forms.cpython-312.pyc 	modified:   backend/registration/__pycache__/models.cpython-312.pyc 	modified:   backend/registration/__pycache__/urls.cpython-312.pyc 	modified:   backend/registration/__pycache__/views.cpython-312.pyc 	modified:   backend/registration/admin.py 	modified:   backend/registration/forms.py 	modified:   backend/registration/migrations/0001_initial.py 	deleted:    backend/registration/migrations/0002_admin_id_number_student_id_number.py 	deleted:    backend/registration/migrations/0003_cartitem.py 	deleted:    backend/registration/migrations/0004_message_delete_cartitem.py 	deleted:    backend/registration/migrations/0005_message_parent.py 	deleted:    backend/registration/migrations/0006_message_is_read.py 	modified:   backend/registration/migrations/__pycache__/0001_initial.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0003_cartitem.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0004_message_delete_cartitem.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0005_message_parent.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0006_message_is_read.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0007_major_student_major.cpython-312.pyc 	modified:   backend/registration/models.py 	new file:   backend/registration/templatetags/__pycache__/__init__.cpython-312.pyc   

--- a/backend/templates/registration/student_detail.html
+++ b/backend/templates/registration/student_detail.html
@@ -22,6 +22,10 @@
         <th>Role</th>
         <td>{{ student.role }}</td>
     </tr>
+    <tr>
+        <th>Major</th>
+        <td>{{ student.major.name if student.major else "Not Assigned" }}</td>
+    </tr>
 </table>
 <a href="{% url 'student_list' %}">Back to Student List</a>
 {% endblock %}
