--- a/backend/templates/registration/student_form.html
+++ b/backend/templates/registration/student_form.html
@@ -39,6 +39,10 @@
         {{ form.profile_picture.label_tag }}<br>
         {{ form.profile_picture }}
     </div>
+    <div class="form-group">
+        {{ form.major.label_tag }}<br>
+        {{ form.major }}
+    </div>
     <button type="submit" class="btn btn-primary">Update</button>
 </form>
 
