--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,5 +1,5 @@
 
-{% include 'sidebar.html' %}
+{% include 'topbar.html' %}
 {% load static %}
 {% block content %}
 <style>
@@ -248,11 +248,5 @@
         <p>Please <a href="{% url 'login' %}">log in</a> or <a href="{% url 'register' %}">register</a> to continue.</p>
     {% endif %}
 </div>
-
-<button onclick="applyHalloweenTheme()">Halloween Theme</button>
-<button onclick="applyWinterTheme()">Winter Theme</button>
-
-<link rel="stylesheet" href="{% static 'css/themes.css' %}">
-<script src="{% static 'js/themes.js' %}"></script>
 
 {% endblock %}
